--- a/sample_config.env
+++ b/sample_config.env
@@ -1,14 +1,14 @@
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+BOT_TOKEN = "5873889598:AAFuUrRcDta2F93CByqIkJWWfqeYdOFZlac"
+GDRIVE_FOLDER_ID = "dfgfhfhggggg"
+OWNER_ID = 1791446058
 DOWNLOAD_DIR = "downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = "True"
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
-AUTHORIZED_CHATS = ""
+TELEGRAM_API = 7784110
+TELEGRAM_HASH = "f81b6478f985c1283fa8c4847d1860ec"
+AUTHORIZED_CHATS = "-100"
 # OPTIONAL CONFIG
 CHANNEL_ID = ""  # Integer ID only
 DATABASE_URL = ""
