--- a/sample_config.env
+++ b/sample_config.env
@@ -1,7 +1,7 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5873889598:AAFuUrRcDta2F93CByqIkJWWfqeYdOFZlac"
-GDRIVE_FOLDER_ID = "dfgfhfhggggg"
-OWNER_ID = 1791446058
+BOT_TOKEN = ""
+GDRIVE_FOLDER_ID = ""
+OWNER_ID = 
 DOWNLOAD_DIR = "downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
